--- a/RSHelper/packages.config
+++ b/RSHelper/packages.config
@@ -1,12 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Dapplo.Log" version="1.0.29" targetFramework="net462" />
-  <package id="Dapplo.Windows.Common" version="0.4.63" targetFramework="net462" />
-  <package id="Dapplo.Windows.Input" version="0.4.63" targetFramework="net462" />
-  <package id="Dapplo.Windows.Messages" version="0.4.63" targetFramework="net462" />
-  <package id="Dapplo.Windows.User32" version="0.4.63" targetFramework="net462" />
-  <package id="Microsoft.Net.Compilers" version="2.2.0" targetFramework="net462" developmentDependency="true" />
-  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net462" />
-  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net462" />
-  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net462" />
+  <package id="CS-Script" version="3.26.2.0" targetFramework="net45" />
+  <package id="CS-Script.bin" version="3.25.1.0" targetFramework="net45" />
+  <package id="Dapplo.Log" version="1.0.29" targetFramework="net45" />
+  <package id="Dapplo.Windows.Common" version="0.4.63" targetFramework="net45" />
+  <package id="Dapplo.Windows.Input" version="0.4.63" targetFramework="net45" />
+  <package id="Dapplo.Windows.Messages" version="0.4.63" targetFramework="net45" />
+  <package id="Dapplo.Windows.User32" version="0.4.63" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net45" />
+  <package id="Microsoft.Net.Compilers" version="2.2.0" targetFramework="net45" developmentDependency="true" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net45" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net45" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net45" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net45" />
+  <package id="System.IO" version="4.3.0" targetFramework="net45" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net45" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net45" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net45" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net45" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net45" />
+  <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net45" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net45" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net45" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net45" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net45" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net45" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net45" />
+  <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net45" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net45" />
 </packages>
