--- a/RSHelperLib/RSHelperLib.csproj
+++ b/RSHelperLib/RSHelperLib.csproj
@@ -87,7 +87,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsBase">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\ItemPrice.cs" />
